--- a/index.html
+++ b/index.html
@@ -43,20 +43,20 @@ Remember: You must create subfolders for each piece of coursework as the semeste
         <title>Course Homepage template</title>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Student Name - Course Homepage</title>
+        <title>Nicole Nolazco - Course Homepage</title>
     </head>
 
     <body>
         <header>
-            <h1>Your Name</h1>
+            <h1>Nicole Nolazco :3</h1>
             <h2>Course Homepage</h2>
-            <p>Course Name - Semester Year</p>
+            <p>Online Computing Applications Technology I - 2025</p>
             <p>This is my homepage for the course.</p>
             <p>My links take you to my coursework.</p>
             <nav>
-                <a href="https://github.com/your-username">My GitHub Profile</a>
+                <a href="https://github.com/usagi-oni">My GitHub Profile</a>
                 |
-                <a href="https://github.com/your-username/your-repo-name">
+                <a href="https://github.com/usagi-oni/me_course_portfolio">
                     My Course Repository
                 </a>
             </nav>
@@ -69,7 +69,7 @@ Remember: You must create subfolders for each piece of coursework as the semeste
                     <li>
                         <a href="example-exercise-00/">Example Exercise 00</a>
                     </li>
-                    <li><a href="">Exercise 01</a></li>
+                    <li><a href=" https://usagi-oni.github.io/me_course_portfolio/">Exercise 01</a></li>
                     <li><a href="">Exercise 02</a></li>
                     <li><a href="">Exercise 03</a></li>
                 </ul>
