--- a/assignment-01/index.html
+++ b/assignment-01/index.html
@@ -1,4 +1,6 @@
-<!DOCTYPE html>
+<!doctype html>
+<html lang="en-US">
+  <head>
 
 <h1> BIZKITS TOP 5 FAV WET FOOD <h1>
     <p> Bizkit loves his wetfood so heres his top 5!!! </p>
@@ -12,3 +14,5 @@
 <ol>
 
 ***
+ </body>
+</html>
