--- a/assignment-01/index.html
+++ b/assignment-01/index.html
@@ -6,11 +6,11 @@
     <p> Bizkit loves his wetfood so heres his top 5!!! </p>
 ***
 <ol>
-    <li> ** Pulled Chicken **
-    <li> ** Ground Bird **
-    <li> ** Pulled Other Bird **
-    <li> ** Ground Cow **
-    <li> ** Smooth Bird & Fish **
+    <li> Pulled Chicken 
+    <li> Ground Bird 
+    <li> Pulled Other Bird 
+    <li> Ground Cow 
+    <li> Smooth Bird & Fish
 <ol>
 
 ***
