--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ Remember: You must create subfolders for each piece of coursework as the semeste
                             Example Assignment 00
                         </a>
                     </li>
-                    <li><a href="">Assignment 01</a></li>
+                    <li><a href="">Assignment 01</a>https://github.com/usagi-oni/me_course_portfolio/tree/main/assignment-01</li>
                     <li><a href="">Assignment 02</a></li>
                     <li><a href="">Assignment 03</a></li>
                 </ul>
