--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@ Remember: You must create subfolders for each piece of coursework as the semeste
                         <a href="example-exercise-00/">Example Exercise 00</a>
                     </li>
                     <li><a href=" https://usagi-oni.github.io/me_course_portfolio/">Exercise 01</a></li>
+                    <a href="file:///C:/Users/Nicholas/OneDrive/Documents/school%20docs/index.html">Week 03 Exercise 01: Box Model Practice</a>
                     <li><a href="">Exercise 02</a></li>
                     <li><a href="">Exercise 03</a></li>
                 </ul>
@@ -83,7 +84,7 @@ Remember: You must create subfolders for each piece of coursework as the semeste
                             Example Assignment 00
                         </a>
                     </li>
-                    <li><a href="">Assignment 01</a>https://github.com/usagi-oni/me_course_portfolio/tree/main/assignment-01</li>
+                    <li><a href="https://github.com/usagi-oni/me_course_portfolio/tree/main/assignment-01">Assignment 01</a></li>
                     <li><a href="">Assignment 02</a></li>
                     <li><a href="">Assignment 03</a></li>
                 </ul>
