added screeny and exercises
added the exercise to the repository and edited the screenshot to be viewable

--- a/week-04-exercise-01/index.html
+++ b/week-04-exercise-01/index.html
@@ -23,7 +23,7 @@
                 Example: If your screenshot is named "apple-dot-com-but-with-papyrus-font.png", change the line to:
                 src="./apple-dot-com-but-with-papyrus-font.png"
             -->
-            <img src="ttu-vandalism.png" alt="Screenshot of the webpage I vandalized" />
+            <img src="ttu vandalism.png" alt="Screenshot of the webpage I vandalized" />
         </div>
         <h2>What I "Vandalized"</h2>
         <p>
