--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@ Remember: You must create subfolders for each piece of coursework as the semeste
                     <li><a href=" https://usagi-oni.github.io/me_course_portfolio/">Exercise 01</a></li>
                     <a href="file:///C:/Users/Nicholas/OneDrive/Desktop/pc%20stuff/me_course_portfolio/week-03-exercise-01/index.html">Week 03 Exercise 01: Box Model Practice</a>
                     <li><a href="file:///C:/Users/Nicholas/OneDrive/Desktop/pc%20stuff/me_course_portfolio/week-04-exercise-01/index.html">Exercises Week 04 Exercise 01: Dev Tools Vandalism</a></li>
+                    <li><a href="file:///C:/Users/Nicholas/OneDrive/Desktop/pc%20stuff/me_course_portfolio/week-04-exercise-02/index.html">Exercises Week 04 Exercise 02: Responsive Layout Techniques - My Collection</a></li>
                     <li><a href="">Exercise 03</a></li>
                 </ul>
             </section>
