--- a/week-06-exercise-01/index.html
+++ b/week-06-exercise-01/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-  <nav class="nav-horizontal">
+  <nav class="nav-centered">
     <ul>
       <li><a href="file:///C:/Users/Nicholas/OneDrive/Desktop/pc%20stuff/me_course_portfolio/week-06-exercise-01/index.html">Home</a></li>
       <li><a href="file:///C:/Users/Nicholas/OneDrive/Desktop/pc%20stuff/me_course_portfolio/week-06-exercise-01/about.html">About</a></li>
