--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@ Remember: You must create subfolders for each piece of coursework as the semeste
                     <li><a href="file:///C:/Users/Nicholas/OneDrive/Desktop/pc%20stuff/me_course_portfolio/week-04-exercise-01/index.html">Exercises Week 04 Exercise 01: Dev Tools Vandalism</a></li>
                     <li><a href="file:///C:/Users/Nicholas/OneDrive/Desktop/pc%20stuff/me_course_portfolio/week-04-exercise-02/index.html">Exercises Week 04 Exercise 02: Responsive Layout Techniques - My Collection</a></li>
                     <li><a href="file:///C:/Users/Nicholas/OneDrive/Desktop/pc%20stuff/me_course_portfolio/week-05-exercise-01/index.html">Exercises Week 05 Exercise 01: Interactive Buttons</a></li>
+                    <li><a href="file:///C:/Users/Nicholas/OneDrive/Desktop/pc%20stuff/me_course_portfolio/week-06-exercise-01/index.html">Week 06 Exercise 01: Navigation Lab</a></li>
                     <li><a href="">Exercise 03</a></li>
                 </ul>
             </section>
