--- a/project 01/index.html
+++ b/project 01/index.html
@@ -1,24 +1,51 @@
 <!DOCTYPE html>
 <body>
+    <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Home</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<nav>
+    <li><a href="Home">Home</a></li>
+    <li><a href="About">About</a></li>
+    <li><a href="Skills">Skills</a></li>
+    <li><a href="Projects">Projects</a></li>
+    <li><a href="Contact">Contact Me</a></li>
+</nav>
+<div id="Home">
     <header>
-        <h1> WELCOME TO ME!!</h1>
+       <title> Nicole Nolazco</title>
     </header>
-
+</div>
+<main>
+    <div id="About">
      <section>
+        <h2> About </h2>
          <p>Haiiii! My name is Nicole! I love music and video games and love to show off my personality through different means. like these lol!
             i hope you enjoy looking at my intro page and HOPEFULLY i can learn a lot from this practice! THANK UUUUUU!!! </p>
-            <p>Skills: 
+         </section>
+</div>
+    <section>
+        <div id="Skills">
+        <h2>Skills</h2>
+            <p>
                 I speak spanish pretty fluently 
-                I'm Pretty good at coding (when i want to be)
+                I'm Pretty good at coding <del>(when i want to be)</del>
                 I'm a great artist!
             </p>
-            <p>projects:
-                
-            </p>
      </section>
-
+</div>
+<div id="Projects">
+    <section>
+        <h2>Projects</h2>
+    </section>
+</div>
+<div id="Contact">
       <footer> 
         <P>contact me here! -> email: nnolazco@ttu.edu  #: 281-624-7653</P>
      </footer>
+    </div>
+     </main>
 </body>
 </html>
