--- a/week-04-exercise-02/index.html
+++ b/week-04-exercise-02/index.html
@@ -18,7 +18,7 @@
             P.S. Please use your own words. Be yourself.
         -->
         <p>
-            The images that i showcase here are things that make me happy and make me who i am. wether its music, movies, people, or things. 
+            The images that i showcase here are things that make me happy and make me who i am. whether its music, movies, people, or things. 
             its stuff i would say that bring me so much happiness and encourage my personality or changed my perspective on life. 
             I love how happy they make me and i wanted to share that info with everyone!
 
