--- a/project 01/index.html
+++ b/project 01/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<body>
+<html lang="en">
+
     <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
+<body>
 <nav>
     <li><a href="Home">Home</a></li>
     <li><a href="About">About</a></li>
