--- a/project 01/index.html
+++ b/project 01/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
+<head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 <nav>
-    <li><a href="Home">Home</a></li>
-    <li><a href="About">About</a></li>
-    <li><a href="Skills">Skills</a></li>
-    <li><a href="Projects">Projects</a></li>
-    <li><a href="Contact">Contact Me</a></li>
+    <li><a href="#Home">Home</a></li>
+    <li><a href="#About">About</a></li>
+    <li><a href="#Skills">Skills</a></li>
+    <li><a href="#Projects">Projects</a></li>
+    <li><a href="#Contact">Contact Me</a></li>
 </nav>
 <div id="Home">
     <header>
