--- a/project 01/index.html
+++ b/project 01/index.html
@@ -18,7 +18,7 @@
 </nav>
 <div id="Home">
     <header>
-       <title> Nicole Nolazco</title>
+       <h1> Nicole Nolazco</h1>
     </header>
 </div>
 <main>
