--- a/project 01/index.html
+++ b/project 01/index.html
@@ -9,16 +9,18 @@
 </head>
 
 <body>
-<nav>
+<nav class="horizontal">
+    <ul>
     <li><a href="#Home">Home</a></li>
     <li><a href="#About">About</a></li>
     <li><a href="#Skills">Skills</a></li>
     <li><a href="#Projects">Projects</a></li>
     <li><a href="#Contact">Contact Me</a></li>
+    </ul>
 </nav>
 <div id="Home">
     <header>
-       <h1> Nicole Nolazco</h1>
+       <h1> Nicole Nolazco </h1>
     </header>
 </div>
 <main>
@@ -32,6 +34,7 @@
     <section>
         <div id="Skills">
         <h2>Skills</h2>
+        <div class="skill-card"></div>
             <p>
                 I speak spanish pretty fluently 
                 I'm Pretty good at coding <del>(when i want to be)</del>
@@ -40,6 +43,7 @@
      </section>
 </div>
 <div id="Projects">
+    <div class="project-card"></div>
     <section>
         <h2>Projects</h2>
     </section>
