--- a/project 01/index.html
+++ b/project 01/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home</title>
-  <link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8">  
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home</title>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
@@ -32,9 +33,8 @@
          </section>
 </div>
     <section>
-        <div id="Skills">
+        <div id="Skills", class="skill-card">
         <h2>Skills</h2>
-        <div class="skill-card"></div>
             <p>
                 I speak spanish pretty fluently 
                 I'm Pretty good at coding <del>(when i want to be)</del>
@@ -42,8 +42,7 @@
             </p>
      </section>
 </div>
-<div id="Projects">
-    <div class="project-card"></div>
+<div id="Projects", class="project-card">
     <section>
         <h2>Projects</h2>
     </section>
