--- a/project 01/index.html
+++ b/project 01/index.html
@@ -19,7 +19,7 @@
     <li><a href="#Contact">Contact Me</a></li>
     </ul>
 </nav>
-<div id="Home">
+<div id="Home", class="name-card">
     <header>
        <h1> Nicole Nolazco </h1>
     </header>
