--- a/project 01/index.html
+++ b/project 01/index.html
@@ -19,6 +19,8 @@
     <li><a href="#Contact">Contact Me</a></li>
     </ul>
 </nav>
+
+<header> HI MY NAME IS:</header>
 <div id="Home", class="name-card">
     <header>
        <h1> Nicole Nolazco </h1>
