--- a/project 01/index.html
+++ b/project 01/index.html
@@ -20,7 +20,8 @@
     </ul>
 </nav>
 
-<header> HI MY NAME IS:</header>
+<h1> HI MY NAME IS:</h1>
+
 <div id="Home", class="name-card">
     <header>
        <h1> Nicole Nolazco </h1>
