--- a/project 01/index.html
+++ b/project 01/index.html
@@ -52,7 +52,7 @@
 </div>
 <div id="Contact">
       <footer> 
-        <P>contact me here! -> email: nnolazco@ttu.edu  #: 281-624-7653</P>
+        <h3>contact me here! -> email: nnolazco@ttu.edu  #: 281-624-7653</h3>
      </footer>
     </div>
      </main>
