--- a/project 01/index.html
+++ b/project 01/index.html
@@ -37,11 +37,9 @@
          <h2>Skills</h2>
         <div id="Skills", class="skill-card">
             <ul>
-            <p>
-                I speak spanish pretty fluently 
-                I'm Pretty good at coding <del>(when i want to be)</del>
-                I'm a great artist!
-            </p>
+            <p>I speak spanish pretty fluently</p>
+            <p>I'm Pretty good at coding <del>(when i want to be)</del></p>
+            <p>I'm a great artist!</p> 
             </ul>
      </section>
 </div>
