--- a/project 01/index.html
+++ b/project 01/index.html
@@ -34,8 +34,9 @@
          </section>
 </div>
     <section>
+        <div id="Skills">
          <h2>Skills</h2>
-        <div id="Skills", class="skill-card">
+        <div class="skill-card">
             <ul>
             <p>I speak spanish pretty fluently</p>
             <p>I'm Pretty good at coding <del>(when i want to be)</del></p>
