--- a/project 01/index.html
+++ b/project 01/index.html
@@ -44,7 +44,8 @@
             </ul>
      </section>
 </div>
-<div id="Projects", class="project-card">
+<div id="Projects">
+<div class="project-card">
     <section>
         <h2>Projects</h2>
     </section>
