--- a/project 01/index.html
+++ b/project 01/index.html
@@ -48,7 +48,7 @@
       <h2>Projects</h2>
 <div class="project-card">
     <section>
-<p> sample box </p>
+<p> sample </p>
     </section>
 </div>
 <div id="Contact">
