--- a/project-02/index.html
+++ b/project-02/index.html
@@ -24,5 +24,6 @@
        <h1> Welcome to my casa! Enjoy your stay! :D </h1>
     </main>
     <h2>Feel welcomed to triverse through any clicks!</h2>
+    <img src="hello kitty.jpg" alt="kitty saying hello" />
 </section>
 </body>
