--- a/project-02/index.html
+++ b/project-02/index.html
@@ -26,4 +26,5 @@
     <h2> ☆ Feel welcomed to triverse through any clicks! ☆</h2>
     <img src="hello kitty.jpg" alt="kitty saying hello" />
 </section>
+<button type="button" onclick="alert('UR NOSEY! ꉂ(˵˃ ᗜ ˂˵)')">₍^. .^₎⟆</button>
 </body>
