--- a/project-02/project.html
+++ b/project-02/project.html
@@ -17,4 +17,11 @@
         <li><a href="file:///C:/Users/Nicholas/OneDrive/Desktop/pc%20stuff/me_course_portfolio/project-02/project.html">PROJECTS</a></li>
     </nav>
     </ul>
+    <section>
+        <h2>°❀.ೃ࿔*</h2>
+<h1>MY BLOOD, SWEAT AND TEARS!!!!</h1>
+
+        <h2>°❀.ೃ࿔*</h2>
+        <h2>ദ്ദി◝ ⩊ ◜.ᐟ</h2>
+    </section>
 
