--- a/project-02/about.html
+++ b/project-02/about.html
@@ -52,5 +52,11 @@
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠋⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
     </h3>
  <h1>⋆˚☆˖°⋆｡° ✮˖ ࣪ ⊹⋆.˚</h1>
+ <h1>Things about muahhhhh:</h1>
+ <li>
+    <h2> I love stars and even have a star tattoo and piercing</h2>
+    <img src="star tattoo.jpg" alt="my star tattoo!"
+    
+ </li>
 </section>
 </body>
