--- a/project-02/about.html
+++ b/project-02/about.html
@@ -55,8 +55,9 @@
  <h1>Things about muahhhhh:</h1>
  <li>
     <h2> I love stars and even have a star tattoo and piercing</h2>
-    <img src="star tattoo.jpg" alt="my star tattoo!"
-    
+    <img src="star tattoo.jpg" alt="my star tattoo!">
+    <h2> I'm a huge animal person and have 3 annoying cats i love ₊˚⊹ᰔ</h2>
+    <img src="my-babies.jpg" alt="My three cute cats with Matcha on the top left Lavender in the middle and Bizkit on the right">
  </li>
 </section>
 </body>
