--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@ Remember: You must create subfolders for each piece of coursework as the semeste
                     <li>
                         <a href="example-project-00/">Example Project 00</a>
                     </li>
-                    <li><a href="">Project 01</a></li>
-                    <li><a href="">Project 02</a></li>
+                          <li><a href="file:///C:/Users/Nicholas/OneDrive/Desktop/pc%20stuff/me_course_portfolio/project%2001/index.html">project 01</a></li>
+                          <li><a href="file:///C:/Users/Nicholas/OneDrive/Desktop/pc%20stuff/me_course_portfolio/project-02/index.html">project 02</a></li>
                 </ul>
             </section>
 
