--- a/project 01/index.html
+++ b/project 01/index.html
@@ -28,6 +28,7 @@
 <main>
     <div id="About">
      <section>
+        <h1>₊˚.⋆☾⋆⁺₊✧</h1>
         <h2> About </h2>
          <p>Haiiii! My name is Nicole! I love music and video games and love to show off my personality through different means. like these lol!
             i hope you enjoy looking at my intro page and HOPEFULLY i can learn a lot from this practice! THANK UUUUUU!!! </p>
@@ -35,6 +36,7 @@
 </div>
     <section>
         <div id="Skills">
+            <h1>₊˚.⋆☾⋆⁺₊✧</h1>
          <h2>Skills</h2>
         <div class="skill-card">
             <ul>
@@ -45,16 +47,19 @@
      </section>
 </div>
 <div id="Projects">
+    <h1>₊˚.⋆☾⋆⁺₊✧</h1>
       <h2>Projects</h2>
 <div class="project-card">
     <section>
-<p> sample </p>
+<li><a href="file:///C:/Users/Nicholas/OneDrive/Desktop/pc%20stuff/me_course_portfolio/week-04-exercise-02/index.html">Assignment 04 Exercise 02</a></li>
     </section>
 </div>
+<h1>₊˚.⋆☾⋆⁺₊✧</h1>
 <div id="Contact">
       <footer> 
         <h3>contact me here! -> email: nnolazco@ttu.edu  #: 281-624-7653</h3>
      </footer>
+<h1>₊˚.⋆☾⋆⁺₊✧</h1>
     </div>
      </main>
 </body>
